2008-06-17  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/env.c: Avoid implicit conversion of pointers / chars to
	booleans.
	* libmisc/env.c: Add brackets and parenthesis.
	* libmisc/env.c: Ignore the return value of puts() and fputs().
	* libmisc/env.c: Avoid multi-statements lines.

2008-06-17  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Avoid implicit conversion of pointers / chars to
	booleans.
	* libmisc/utmp.c: Add brackets and parenthesis.
	* libmisc/utmp.c: Exit with the EXIT_FAILURE status code in case
	of failure.
	* libmisc/utmp.c: Avoid assignments in comparisons.
	* lib/prototypes.h, libmisc/utmp.c: Change setutmp()'s prototype
	to return an int because pututline() and pututxline() may fail.

2008-06-17  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/audit_help.c: Added one string for translation.
	* po/POTFILES.in: Added libmisc/audit_help.c,
	libmisc/find_new_gid.c, libmisc/find_new_uid.c, libmisc/getlong.c,
	libmisc/getrange.c, libmisc/xgetXXbyYY.c, and libmisc/yesno.c.
	Removed libmisc/find_new_ids.c

2008-06-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: If the faillog file exist, warn in case of
	failure when open(), lssek(), write() or close() fails when the
	new user's faillog entry is reset.
	* src/useradd.c: Ditto for the lastlog entry.

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c: Add brackets and parenthesis.
	* libmisc/limits.c: Avoid implicit conversion of pointers /
	integers to booleans.
	* libmisc/limits.c: Ignore the return value of umask(). We will
	never return to the original umask.
	* libmisc/limits.c: Avoid multi-statements lines.
	* libmisc/limits.c: Added default to a switch(). Report invalid
	limit strings to syslog.
	* libmisc/limits.c: Ignore the return value of fclose().
	/etc/limits is open read-only.
	* libmisc/limits.c: Ignore the return value of fputs() and
	sleep().