@@ -1,3 +1,7 @@
+2008-07-11  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* libmisc/setugid.c: Add brackets.
+
 2008-06-17  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* libmisc/env.c: Avoid implicit conversion of pointers / chars to
